VisualforcePage1/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK( DOB__c ) ) ,
  IF( DATE( 2000 , MONTH( DOB__c ) , DAY( DOB__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( DOB__c ),
     YEAR (Today()) - YEAR ( DOB__c ) -1 ),
  0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <defaultValue>DATE(YEAR(TODAY()) - 3 , MONTH(TODAY()), DAY(TODAY()))</defaultValue>
        <label>DOB</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_PDF__c</fullName>
        <formula>HYPERLINK(&quot;https://c.ap5.visual.force.com/apex/StudentDetailPage?id=&quot;&amp;Id, &quot;Generate PDF&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate PDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Last_Name__c  &amp; IF(First_Name__c = null, &quot;&quot;, &quot;, &quot; &amp; First_Name__c)</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WifeName__c</fullName>
        <label>WifeName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Class__c</columns>
        <columns>Sex__c</columns>
        <columns>Age__c</columns>
        <columns>Married__c</columns>
        <columns>WifeName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MaleStudents</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Class__c</columns>
        <columns>Age__c</columns>
        <columns>Married__c</columns>
        <columns>WifeName__c</columns>
        <columns>Sex__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sex__c</field>
            <operation>equals</operation>
            <value>Male</value>
        </filters>
        <label>MaleStudents</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CheckIfMarried</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
AND( 
Married__c, 
TEXT( Sex__c ) = &quot;Male&quot;, 
LEN( WifeName__c ) = 0 
), 
true, false 
)</errorConditionFormula>
        <errorDisplayField>WifeName__c</errorDisplayField>
        <errorMessage>Wife name is required for all married male student</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ClassCapacity</fullName>
        <active>true</active>
        <errorConditionFormula>Class__r.MaxSize__c = Class__r.NumberOfStudents__c
&amp;&amp; ISNEW()</errorConditionFormula>
        <errorDisplayField>Class__c</errorDisplayField>
        <errorMessage>Sorry.. This class is full</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOBLessThanTODAY</fullName>
        <active>true</active>
        <errorConditionFormula>DOB__c &gt;  TODAY()</errorConditionFormula>
        <errorMessage>DOB Should be less than Current date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateDOB</fullName>
        <active>false</active>
        <errorConditionFormula>Age__c &lt; 3</errorConditionFormula>
        <errorDisplayField>DOB__c</errorDisplayField>
        <errorMessage>We cannot enroll a student below 3 years of age</errorMessage>
    </validationRules>
</CustomObject>